fix(dashboard): bird's-eye review fixes — RBAC + map perf
Backend review concerns (verified via rbac-test, 15/15):
- AnalyticsController.extractRoles now degrades anonymous->PUBLIC, matching the
  service's public floor — /packs + /catalog/_search no longer leak metadata of
  every visibleTo:[] tile to anonymous callers (only PUBLIC tiles, 10 of 28).
- cl_table_complaints_at_risk projects current_assignee_uuid but was visibleTo:[]
  (any authed employee). Restrict to the supervisor ceiling like its sibling officer
  tiles (PGR_SUPERVISOR/PGR_ADMIN/SUPERUSER/SUPERVISOR). Verified: supervisor 50 rows,
  PGR_LME kpi_forbidden.

Map review concern:
- Drop the redundant pin resolution in buildMapDisplayLayers (the displayLayers override
  already positions pins via the ward join) — was running the heavy point-in-polygon
  pass twice per zoom-level change.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>